fix layout burguer menu on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ html, body {
   background: var(--color-dark);
   color: var(--color-light);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 a {
